# RAG-aerospace-project

./: .env.example  .gitignore  .keepalive  CHANGELOG.md  Makefile  README.md  WARP.md  docker-compose.yml  requirements-dev.txt  requirements.txt
.github/workflows/: chart-testing.yml  ci.yml  eval.yml  npm-publish.yml  offline-eval.yml  release.yml
clients/js/: package.json  ragClient.js
clients/python/: pyproject.toml  rag_client.py
docker/: Dockerfile  start.sh
docs/eval/: questions.sample.json
docs/grafana/: alerts.json  dashboard-api-overview.json  dashboard-dr.json  dashboard-online-eval.json  dashboard-quality-slo.json  dashboard-router.json  dashboard-searchops.json
docs/runbooks/: milvus-backup.md  on-call.md  rate-limiting.md  scaling.md  secrets.md  slo.md  troubleshoot-readiness.md
k8s/helm/: Chart.yaml  values-dev.yaml  values-prod.yaml  values.schema.json  values.yaml
k8s/manifests/: cost-report-configmap.yaml  cost-report-cronjob.yaml  deployment.yaml  docs-retention-sweeper-cronjob.yaml  external-secret-rag-secrets.yaml  ingress.yaml  istio-destinationrules.yaml  keda-scaledobject.yaml  milvus-backup-cronjob.yaml  milvus-backup-script-configmap.yaml  milvus-restore-job.yaml  prometheus-rules.yaml  (+2 more)
scripts/: k6-smoke.js  smoke.py
src/: __init__.py  config.py
tests/: conftest.py  test_ask_filters_integration.py  test_ask_integration.py  test_ask_with_apikey.py  test_cache.py  test_filters_milvus_faiss.py  test_hybrid_rerank.py  test_jwks_rs256.py  test_jwt_negative.py  test_metrics_public.py  test_rate_limit.py  test_readiness.py
(+26 files in other folders)
